Fix some bug with Docling table extraction + test code on advp1

--- a/gwas_table_extraction.ipynb
+++ b/gwas_table_extraction.ipynb
@@ -25,6 +25,7 @@
     "# from rich import print as rprint\n",
     "import io\n",
     "from typing import List, Union, Tuple\n",
+    "from tqdm import tqdm\n",
     "# import pdfplumber\n",
     "# import fitz \n",
     "import numpy as np\n",
@@ -41,7 +42,8 @@
     "from sentence_transformers import SentenceTransformer, util, CrossEncoder\n",
     "import torch\n",
     "import torch.nn.functional as F\n",
-    "from transformers import AutoTokenizer, AutoModel, AutoModelForCausalLM"
+    "from transformers import AutoTokenizer, AutoModel, AutoModelForCausalLM, BitsAndBytesConfig, LogitsProcessor, LogitsProcessorList\n",
+    "device = torch.device(\"mps\")"
    ]
   },
   {
@@ -228,7 +230,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "id": "6513d3c2",
    "metadata": {},
    "outputs": [
@@ -243,7 +245,6 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Loading weights: 100%|██████████| 770/770 [00:00<00:00, 1686.15it/s, Materializing param=model.encoder_input_proj.2.1.weight]                                                 \n",
       "Usage of TableItem.export_to_dataframe() without `doc` argument is deprecated.\n",
       "Usage of TableItem.export_to_dataframe() without `doc` argument is deprecated.\n",
       "Usage of TableItem.export_to_dataframe() without `doc` argument is deprecated.\n",
@@ -278,7 +279,6 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Loading weights: 100%|██████████| 770/770 [00:00<00:00, 1693.82it/s, Materializing param=model.encoder_input_proj.2.1.weight]                                                 \n",
       "Usage of TableItem.export_to_dataframe() without `doc` argument is deprecated.\n",
       "Usage of TableItem.export_to_dataframe() without `doc` argument is deprecated.\n"
      ]
@@ -309,7 +309,6 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Loading weights: 100%|██████████| 770/770 [00:00<00:00, 1373.63it/s, Materializing param=model.encoder_input_proj.2.1.weight]                                                 \n",
       "Usage of TableItem.export_to_dataframe() without `doc` argument is deprecated.\n",
       "Usage of TableItem.export_to_dataframe() without `doc` argument is deprecated.\n",
       "Usage of TableItem.export_to_dataframe() without `doc` argument is deprecated.\n",
@@ -348,7 +347,6 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Loading weights: 100%|██████████| 770/770 [00:00<00:00, 1525.08it/s, Materializing param=model.encoder_input_proj.2.1.weight]                                                 \n",
       "Usage of TableItem.export_to_dataframe() without `doc` argument is deprecated.\n",
       "Usage of TableItem.export_to_dataframe() without `doc` argument is deprecated.\n",
       "Usage of TableItem.export_to_dataframe() without `doc` argument is deprecated.\n",
@@ -381,7 +379,6 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Loading weights: 100%|██████████| 770/770 [00:00<00:00, 1580.92it/s, Materializing param=model.encoder_input_proj.2.1.weight]                                                 \n",
       "Usage of TableItem.export_to_dataframe() without `doc` argument is deprecated.\n",
       "Usage of TableItem.export_to_dataframe() without `doc` argument is deprecated.\n"
      ]
@@ -412,7 +409,6 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Loading weights: 100%|██████████| 770/770 [00:00<00:00, 1539.97it/s, Materializing param=model.encoder_input_proj.2.1.weight]                                                 \n",
       "Usage of TableItem.export_to_dataframe() without `doc` argument is deprecated.\n",
       "Usage of TableItem.export_to_dataframe() without `doc` argument is deprecated.\n",
       "Usage of TableItem.export_to_dataframe() without `doc` argument is deprecated.\n",
@@ -693,13 +689,6 @@
    "metadata": {},
    "outputs": [
     {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Loading weights: 100%|██████████| 199/199 [00:00<00:00, 2285.78it/s, Materializing param=pooler.dense.weight]                               \n"
-     ]
-    },
-    {
      "data": {
       "text/plain": [
        "BertModel(\n",
@@ -714,7 +703,7 @@
        "    (layer): ModuleList(\n",
        "      (0-11): 12 x BertLayer(\n",
        "        (attention): BertAttention(\n",
-       "          (self): BertSelfAttention(\n",
+       "          (self): BertSdpaSelfAttention(\n",
        "            (query): Linear(in_features=768, out_features=768, bias=True)\n",
        "            (key): Linear(in_features=768, out_features=768, bias=True)\n",
        "            (value): Linear(in_features=768, out_features=768, bias=True)\n",
@@ -790,57 +779,6 @@
     "\n",
     "#     best_idx = int(np.argmax(np.asarray(all_scores, dtype=float)))\n",
     "#     return candidates[best_idx], candidates_scores[best_idx]\n",
-    "\n",
-    "# def reranking_from_llm(query, query_details, candidates, candidates_details):\n",
-    "#     prompt = f\"\"\"\n",
-    "#     You are matching one source table column to the single best target schema field.\n",
-    "\n",
-    "#     Rules:\n",
-    "#     - Pick exactly one candidate number that represents the same concept as the source column.\n",
-    "#     - Rely on meaning (units, value types, examples), not just wording.\n",
-    "#     - If no perfect match, choose the closest and mention uncertainty briefly.\n",
-    "\n",
-    "#     Example:\n",
-    "#     Source column:\n",
-    "#     - name: \"Position\"\n",
-    "#     - details: Genomic coordinate location. Keywords: BP, POS, Base Pair, start, end. Examples: 45411941, 10240500:10248600 (range), build 37.\n",
-    "\n",
-    "#     Candidates:\n",
-    "#     1. \"Variant ID | description: dbSNP identifier \n",
-    "#     2. \"Chromosome position | description: genomic coordinate (bp)\n",
-    "#     3. \"Effect allele | description: allele tested\n",
-    "\n",
-    "#     Expected output:\n",
-    "#     BEST=2\n",
-    "\n",
-    "#     Source column:\n",
-    "#     - name: {query}\n",
-    "#     - details: {query_details}\n",
-    "\n",
-    "#     Candidates:\n",
-    "#     1. {candidates[0]} | descrption: {candidates_details[0]}\n",
-    "#     2. {candidates[1]} | descrption: {candidates_details[1]}\n",
-    "#     3. {candidates[2]} | descrption: {candidates_details[2]}\n",
-    "#     4. {candidates[3]} | descrption: {candidates_details[3]}\n",
-    "#     5. {candidates[4]} | descrption: {candidates_details[4]}\n",
-    "\n",
-    "#     Output:\n",
-    "#     BEST=\n",
-    "#     \"\"\"\n",
-    "\n",
-    "#     inputs = llm_model_tokenizer(prompt, return_tensors=\"pt\")\n",
-    "\n",
-    "#     with torch.no_grad():\n",
-    "#         output_ids = llm_model.generate(\n",
-    "#             **inputs,\n",
-    "#             max_new_tokens=64,\n",
-    "#             do_sample=False,\n",
-    "#             temperature=0.0,\n",
-    "#         )\n",
-    "\n",
-    "#     resp = llm_model_tokenizer.decode(output_ids[0], skip_special_tokens=True)\n",
-    "#     match = re.search(r\"BEST\\s*=\\s*(\\d+)\", resp)\n",
-    "#     return candidates[int(match.group(1)) - 1] if int(match.group(1)) - 1 in range(len(candidates)) else query\n",
     "    \n",
     "\n",
     "# setting up models\n",
@@ -853,13 +791,7 @@
     "# reranker_model_name = \"BAAI/bge-reranker-base\"\n",
     "# reranker_tokenizer = AutoTokenizer.from_pretrained(reranker_model_name)\n",
     "# reranker_model = AutoModelForSequenceClassification.from_pretrained(reranker_model_name)\n",
-    "# reranker_model.eval()\n",
-    "\n",
-    "# setting up llm\n",
-    "# llm_model_name = \"stanford-crfm/BioMedLM\"\n",
-    "# llm_model_tokenizer = AutoTokenizer.from_pretrained(llm_model_name)\n",
-    "# llm_model = AutoModelForCausalLM.from_pretrained(llm_model_name, torch_dtype=torch.float32).to(\"mps\")\n",
-    "# llm_model.eval()"
+    "# reranker_model.eval()"
    ]
   },
   {
@@ -1107,6 +1039,13 @@
    "id": "251adf23",
    "metadata": {},
    "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Asking to truncate to max_length but no maximum length is provided and the model has no predefined maximum length. Default to no truncation.\n"
+     ]
+    },
     {
      "name": "stdout",
      "output_type": "stream",
