--- a/test_advp1.ipynb
+++ b/test_advp1.ipynb
@@ -328,6 +328,8 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
+      "objc[2241]: Class AVFFrameReceiver is implemented in both /Users/justpqa/advpai/venv/lib/python3.10/site-packages/av/.dylibs/libavdevice.62.1.100.dylib (0x136d043a8) and /Users/justpqa/advpai/venv/lib/python3.10/site-packages/cv2/.dylibs/libavdevice.61.3.100.dylib (0x13ebcc3a8). This may cause spurious casting failures and mysterious crashes. One of the duplicates must be removed or renamed.\n",
+      "objc[2241]: Class AVFAudioReceiver is implemented in both /Users/justpqa/advpai/venv/lib/python3.10/site-packages/av/.dylibs/libavdevice.62.1.100.dylib (0x136d043f8) and /Users/justpqa/advpai/venv/lib/python3.10/site-packages/cv2/.dylibs/libavdevice.61.3.100.dylib (0x13ebcc3f8). This may cause spurious casting failures and mysterious crashes. One of the duplicates must be removed or renamed.\n",
       "Usage of TableItem.export_to_dataframe() without `doc` argument is deprecated.\n",
       "Usage of TableItem.export_to_dataframe() without `doc` argument is deprecated.\n",
       "Usage of TableItem.export_to_dataframe() without `doc` argument is deprecated.\n",
@@ -418,6 +420,112 @@
     "            df_lst[i-1].to_csv(f\"test_tables/{file_name.split('/')[-1].replace('.pdf', '')}_table_{i}.csv\", index=False)\n",
     "    except:\n",
     "        print(f\"Not accurate extraction for {file_name}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "dacbe3b7",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Asking to truncate to max_length but no maximum length is provided and the model has no predefined maximum length. Default to no truncation.\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "s11357-019-00071-5_table_1.csv\n",
+      "Locus: [('Gene', 'Gene: CR1, BIN1, OR2S2, MS4A6A, MS4A4E, ', 0.5280643701553345)]\n",
+      "Chr: [('Chr', 'Chromosome number: 1, 2, 9, 11, 14, ', 0.6727339625358582)]\n",
+      "P-value: [('p value.', 'P-value value: 4.70 /C2 10 /C0 6, 3.67 3 10 L 8, 8.45 3 10 L 7, 8.68 /C2 10 /C0 6, 2.10 /C2 10 /C0 6, ', 0.4075296223163605), ('Age 60 e 79 y (younger).p value', 'P-value value: 5.41 /C2 10 /C0 9, 6.06 3 10 L 14, 5.43 3 10 L 6, 1.08 /C2 10 /C0 5, 1.45 /C2 10 /C0 6, ', 0.4264649748802185), ('Age /C21 80 y (older).p value', 'P-value value: 0.027, 0.340, 0.363, 3.38 /C2 10 /C0 4, 5.53 /C2 10 /C0 4, ', 0.5158348083496094), ('Heterogeneity between the younger & older age groups.p value', 'P-value value: 0.159, 6.86 3 10 L 4, 0.0695, 0.587, 0.863, ', 0.5418775677680969)]\n",
+      "SNP: [('Top SNP in gene.', 'top Single nucleotide polymorphism identifier in gene: rs3818361, rs6431219, rs12378268, rs1834550, rs184909761, ', 0.6773247122764587)]\n",
+      "RA: [('A1/A2.', 'effect allele / tested allele/Other allele / non-effect allele: A/G, T/C, C/T, G/A, T/A, ', 0.6531670689582825)]\n",
+      "AF: [('Age 60 e 79 y (younger).Frq', 'Frequency: 0.204, 0.419, 0.32, 0.389, 0.353, ', 0.4497758448123932), ('Age /C21 80 y (older).Frq', 'Frequency: 0.195, 0.408, 0.32, 0.402, 0.36, ', 0.4339182376861572)]\n",
+      "Sample size: [('Age 60 e 79 y (younger).N', 'Total sample size: 14,867, 14,225, 14,185, 14,677, 12,169, ', 0.6539657115936279), ('Age /C21 80 y (older).N', 'Total sample size: 6554, 6341, 6339, 6473, 5340, ', 0.654046356678009)]\n",
+      "Effect Size: [('Age 60 e 79 y (younger).OR (95% CI)', 'odds ratio (95% Confidence Interval): 1.21 (1.14, 1.29), 1.23 (1.17, 1.30), 1.14 (1.08, 1.21), 0.89 (0.84, 0.94), 0.86 (0.81, 0.92), ', 0.48151111602783203), ('Age /C21 80 y (older).OR (95% CI)', 'odds ratio (95% Confidence Interval): 1.12 (1.01, 1.23), 1.04 (0.96, 1.13), 0.86 (0.80, 0.94), 0.85 (0.78, 0.93), 0.98 (0.90, 1.06), ', 0.48938655853271484)]\n",
+      "\n",
+      "1-s2.0-S0197458019300727-main_table_1.csv\n",
+      "Locus: [('Gene', 'Gene: CR1, BIN1, OR2S2, MS4A6A, MS4A4E, ', 0.5280643701553345)]\n",
+      "Chr: [('Chr', 'Chromosome number: 1, 2, 9, 11, 14, ', 0.6727339625358582)]\n",
+      "P-value: [('p value.', 'P-value value: 4.70 /C2 10 /C0 6, 3.67 3 10 L 8, 8.45 3 10 L 7, 8.68 /C2 10 /C0 6, 2.10 /C2 10 /C0 6, ', 0.4075296223163605), ('Age 60 e 79 y (younger).p value', 'P-value value: 5.41 /C2 10 /C0 9, 6.06 3 10 L 14, 5.43 3 10 L 6, 1.08 /C2 10 /C0 5, 1.45 /C2 10 /C0 6, ', 0.4264649748802185), ('Age /C21 80 y (older).p value', 'P-value value: 0.027, 0.340, 0.363, 3.38 /C2 10 /C0 4, 5.53 /C2 10 /C0 4, ', 0.5158348083496094), ('Heterogeneity between the younger & older age groups.p value', 'P-value value: 0.159, 6.86 3 10 L 4, 0.0695, 0.587, 0.863, ', 0.5418775677680969)]\n",
+      "SNP: [('Top SNP in gene.', 'top Single nucleotide polymorphism identifier in gene: rs3818361, rs6431219, rs12378268, rs1834550, rs184909761, ', 0.6773247122764587)]\n",
+      "RA: [('A1/A2.', 'effect allele / tested allele/Other allele / non-effect allele: A/G, T/C, C/T, G/A, T/A, ', 0.6531670689582825)]\n",
+      "AF: [('Age 60 e 79 y (younger).Frq', 'Frequency: 0.204, 0.419, 0.32, 0.389, 0.353, ', 0.4497758448123932), ('Age /C21 80 y (older).Frq', 'Frequency: 0.195, 0.408, 0.32, 0.402, 0.36, ', 0.4339182376861572)]\n",
+      "Sample size: [('Age 60 e 79 y (younger).N', 'Total sample size: 14,867, 14,225, 14,185, 14,677, 12,169, ', 0.6539657115936279), ('Age /C21 80 y (older).N', 'Total sample size: 6554, 6341, 6339, 6473, 5340, ', 0.654046356678009)]\n",
+      "Effect Size: [('Age 60 e 79 y (younger).OR (95% CI)', 'odds ratio (95% Confidence Interval): 1.21 (1.14, 1.29), 1.23 (1.17, 1.30), 1.14 (1.08, 1.21), 0.89 (0.84, 0.94), 0.86 (0.81, 0.92), ', 0.48151111602783203), ('Age /C21 80 y (older).OR (95% CI)', 'odds ratio (95% Confidence Interval): 1.12 (1.01, 1.23), 1.04 (0.96, 1.13), 0.86 (0.80, 0.94), 0.85 (0.78, 0.93), 0.98 (0.90, 1.06), ', 0.48938655853271484)]\n",
+      "\n",
+      "s41588-019-0358-2_table_1.csv\n",
+      "SNP: [('', ': rs4844610, rs6733839, rs10933431, rs9271058, rs75932628, ', 0.6114726066589355)]\n",
+      "Chr: [('Chr..Chr.', 'chr: 1, 2, 6, 7, 8, ', 1)]\n",
+      "Position: [('Position b.Position', 'Position: 207802552, 127892810, 233981912, 32575406, 41129252, ', 0.5059198141098022)]\n",
+      "Locus: [('Closest gene c.Closest gene', 'Closest gene c: CR1, BIN1, INPP5D, HLA-DRB1, TREM2, ', 0.5145701169967651)]\n",
+      "RA: [('Major/ minor alleles.Major/ minor alleles', 'Major/ minor alleles: C/A, C/T, C/G, T/A, A/C, ', 0.572628915309906)]\n",
+      "AF: [('MAF d.MAF', 'maf: 0.187, 0.407, 0.223, 0.27, 0.008, ', 0.6273393630981445)]\n",
+      "Sample size: [('stage 1 discovery ( n /thinspace = /thinspace63,926).OR', 'stage 1 discovery ( Total sample size /thinspace = /thinspace63,926): 1.16, 1.18, 0.9, 1.1, 2.01, ', 0.5167749524116516), ('stage 2 ( n /thinspace = /thinspace18,845).OR', 'stage 2 ( Total sample size /thinspace = /thinspace18,845): 1.20, 1.23, 0.92, 1.11, 2.50, ', 0.5263794660568237)]\n",
+      "Confidence Interval: [('stage 1 discovery ( n /thinspace = /thinspace63,926).95%Ci', '95%confidence interval: 1.12-1.20, 1.15-1.22, 0.87-0.94, 1.06-1.14, 1.65-2.44, ', 0.7427425384521484), ('stage 2 ( n /thinspace = /thinspace18,845).95%Ci', '95%confidence interval: 1.13-1.27, 1.18-1.29, 0.87-0.97, 1.06-1.17, 1.56-4.00, ', 0.7503045797348022), ('Overall stage 1/thinspace + /thinspacestage 2 ( n /thinspace = /thinspace82,771).95%Ci', '95%confidence interval: 1.13-1.21, 1.17-1.23, 0.88-0.94, 1.07-1.13, 1.73-2.49, ', 0.733658492565155)]\n",
+      "stage 1 discovery ( n /thinspace = /thinspace63,926).P: [('stage 1 discovery ( n /thinspace = /thinspace63,926).P', None, 1)]\n",
+      "P-value: [('stage 2 ( n /thinspace = /thinspace18,845).P', 'p-value: 3.8 × /thinspace10 - 10, 2.0 × /thinspace10 - 18, 3.2 × /thinspace10 - 3, 5.7 × /thinspace10 - 5, 1.5/thinspace × /thinspace10 - 4, ', 0.40690258145332336), ('Overall stage 1/thinspace + /thinspacestage 2 ( n /thinspace = /thinspace82,771).Meta P', 'meta p-value: 3.6 × /thinspace10 - 24, 2.1 × /thinspace10 - 44, 3.4 × /thinspace10 - 9, 1.4 × /thinspace10 - 11, 2.7 × /thinspace10 - 15, ', 0.5404720902442932)]\n",
+      "Effect Size: [('Overall stage 1/thinspace + /thinspacestage 2 ( n /thinspace = /thinspace82,771).OR', 'odds ratio: 1.17, 1.20, 0.91, 1.10, 2.08, ', 0.5248802900314331)]\n",
+      "Overall stage 1/thinspace + /thinspacestage 2 ( n /thinspace = /thinspace82,771).I 2 (%), P: [('Overall stage 1/thinspace + /thinspacestage 2 ( n /thinspace = /thinspace82,771).I 2 (%), P', None, 1)]\n",
+      "\n",
+      "s41588-018-0311-9_table_1.csv\n",
+      "Locus: [('Region.Locus', 'Locus: 1, 2, 3, 4, 5, ', 0.6077675819396973), ('Gene', 'Gene: ADAMTS4, CR1, BIN1, INPPD5, HESX1, ', 0.4769435226917267)]\n",
+      "Chr: [('Chr', 'Chromosome number: 1, 2, 3, 4, 6, ', 0.6408736705780029)]\n",
+      "SNP: [('Case-control status (phase 1).SNP', 'Single nucleotide polymorphism identifier: rs4575098, rs6656401, rs4663105, rs10933431, nan, ', 0.6476064920425415), ('AD-by-proxy (phase 2).SNP', 'Single nucleotide polymorphism identifier: rs4575098, rs679515, rs4663105, rs10933431, rs184384746, ', 0.6603267788887024), ('Overall (phase 3).SNP', 'Single nucleotide polymorphism identifier: rs4575098, rs2093760, rs4663105, rs10933431, rs184384746, ', 0.660340428352356)]\n",
+      "Case-control status (phase 1).P: [('Case-control status (phase 1).P', None, 1)]\n",
+      "AD-by-proxy (phase 2).P: [('AD-by-proxy (phase 2).P', None, 1)]\n",
+      "Position: [('Overall (phase 3).bp', 'Base-pair position: 161155392, 207786828, 127891427, 233981912, 57226150, ', 0.6496379375457764)]\n",
+      "RA: [('A1', 'Effect allele / tested allele: A, C, G, T, ', 0.6727954149246216), ('A2', 'Other allele / non-effect allele: G, A, C, T, ', 0.6641621589660645)]\n",
+      "AF: [('MAF', 'Minor Allele Frequency: 0.240, 0.205, 0.415, 0.235, 0.002, ', 0.6490474939346313)]\n",
+      "Z: [('Z', 'Z-score statistic: 6.36, 8.82, 13.94, - 6.13, 5.69, ', 1)]\n",
+      "P: [('P', 'P-value: 2.05 /thinspace × 10 - 10, 1.10 /thinspace × 10 - 18, 3.38 /thinspace × 10 - 44, 8.92 /thinspace × 10 - 10, 1.24 /thinspace × 10 - 8, ', 1)]\n",
+      "Direction: [('Direction', 'Direction: ? +++, ++++, ?---, ??? +, ? + - +, ', 1)]\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "referencing_col_df = pd.read_csv(\"Rules for harmonizing ADVP papers - Main cols.csv\")\n",
+    "referencing_col_df[\"column_with_context\"] = referencing_col_df.apply(lambda x: x[\"column\"] if pd.isna(x[\"description\"]) else x[\"column\"] + \": \" + x[\"description\"], axis = 1)\n",
+    "\n",
+    "gwas_column_matching_engine = GWASColumnMatchingEngine(referencing_col_df)\n",
+    "\n",
+    "for file in os.listdir(\"./test_tables\"):\n",
+    "    if \"table\" in file and \".csv\" in file and \"harmonized\" not in file:\n",
+    "        print(file)\n",
+    "        df = pd.read_csv(f\"./test_tables/{file}\")\n",
+    "        df.columns = ['' if 'Unnamed:' in col else col for col in df.columns]\n",
+    "        col_to_ref_col = gwas_column_matching_engine.match_many_col_to_ref_col(df)\n",
+    "        for ref_col in col_to_ref_col:\n",
+    "            print(f\"{ref_col}: {col_to_ref_col[ref_col]}\")\n",
+    "        print()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "3e09de28",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "modified_df_all = None\n",
+    "for file in os.listdir(\"./test_tables\"):\n",
+    "    if \".csv\" in file and \"table\" in file and \"harmonized\" not in file:\n",
+    "        df = pd.read_csv(f\"./test_tables/{file}\")\n",
+    "        df.columns = ['' if 'Unnamed:' in col else col for col in df.columns]\n",
+    "        modified_df = format_original_table(df, gwas_column_matching_engine, remove_unique_col = False)\n",
+    "        modified_df[\"file_name\"] = file\n",
+    "        if modified_df_all is None:\n",
+    "            modified_df_all = modified_df.copy()\n",
+    "        else:\n",
+    "            modified_df_all = pd.concat([modified_df_all, modified_df], ignore_index = True)\n",
+    "        modified_df.to_csv(f\"./harmonized_test_tables/{file.replace('.csv', '')}_harmonized.csv\", index = False)\n",
+    "modified_df_all.to_csv(\"./harmonized_test_tables/harmonized_table.csv\", index = False)"
    ]
   }
  ],
