Update test papers, set these tests in format "pmid_pmcid.pdf"

--- a/test_advp1.ipynb
+++ b/test_advp1.ipynb
@@ -15,8 +15,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "import os\n",
     "import pandas as pd\n",
-    "from gwas_table_extraction import *"
+    "# from gwas_table_extraction import *"
    ]
   },
   {
@@ -54,11 +55,26 @@
    "metadata": {},
    "source": [
     "Test papers along with their PMC and PMID\n",
-    "- 1-s2.0-S0197458018303816-main.pdf - 30448613 - PMC6331247\n",
-    "- 1-s2.0-S0197458019300727-main.pdf - 30979435 - PMC6783343\n",
-    "- s11357-019-00071-5.pdf - 31055733 - PMC6544706\n",
-    "- s41588-018-0311-9.pdf - 30617256 - PMC6836675\n",
-    "- s41588-019-0358-2.pdf - 30820047 - PMC6463297"
+    "- 30448613 - PMC6331247\n",
+    "- 30979435 - PMC6783343\n",
+    "- 31055733 - PMC6544706\n",
+    "- 30617256 - PMC6836675\n",
+    "- 30820047 - PMC6463297\n",
+    "- 29458411 - PMC5819208\n",
+    "- 29777097 - PMC5959890\n",
+    "- 30651383 - PMC6369905\n",
+    "- 31497858 - PMC6736148\n",
+    "- 30930738 - PMC6425305\n",
+    "- 31426376 - PMC6723529\n",
+    "- 29967939 - PMC6280657\n",
+    "- 29107063 - PMC5920782\n",
+    "- 29274321 - PMC5938137\n",
+    "- 30413934 - PMC6358498\n",
+    "- 30805717 - PMC7193309\n",
+    "- 30636644 - PMC6330399\n",
+    "- 27899424 - PMC5237405\n",
+    "- 29752348 - PMC5976227\n",
+    "- 28560309 - PMC5440281"
    ]
   },
   {
@@ -68,70 +84,14 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# paper file - PMID - PMCID - table id\n",
+    "# paper file - PMID - PMCID\n",
     "test_papers_info = [\n",
-    "    (\"test_papers/1-s2.0-S0197458018303816-main.pdf\", 30448613, \"PMC6331247\", [1, 2, 3]),\n",
-    "    (\"test_papers/1-s2.0-S0197458019300727-main.pdf\", 30979435, \"PMC6783343\", [1]),\n",
-    "    (\"test_papers/s11357-019-00071-5.pdf\", 31055733, \"PMC6544706\", [1, 3, 4]), # got error in PMC\n",
-    "    (\"test_papers/s41588-018-0311-9.pdf\", 30617256, \"PMC6836675\", [1]),\n",
-    "    (\"test_papers/s41588-019-0358-2.pdf\", 30820047, \"PMC6463297\", [1, 2])\n",
-    "]\n",
-    "\n",
-    "for file_name, pmid, pmcid, inx_lst in test_papers_info:\n",
-    "    try:\n",
-    "        df_lst = extract_tables_lst_from_paper(pmcid, file_name)\n",
-    "    except:\n",
-    "        print(f\"Error while extracting tables from {file_name}\")\n",
-    "    try:\n",
-    "        for i in inx_lst:\n",
-    "            df_lst[i-1].to_csv(f\"test_tables/{file_name.split('/')[-1].replace('.pdf', '')}_table_{i}.csv\", index=False)\n",
-    "    except:\n",
-    "        print(f\"Not accurate extraction for {file_name}\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "dacbe3b7",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "referencing_col_df = pd.read_csv(\"Rules for harmonizing ADVP papers - Main cols.csv\")\n",
-    "referencing_col_df[\"column_with_context\"] = referencing_col_df.apply(lambda x: x[\"column\"] if pd.isna(x[\"description\"]) else x[\"column\"] + \": \" + x[\"description\"], axis = 1)\n",
-    "\n",
-    "gwas_column_matching_engine = GWASColumnMatchingEngine(referencing_col_df)\n",
-    "\n",
-    "for file in os.listdir(\"./test_tables\"):\n",
-    "    if \"table\" in file and \".csv\" in file and \"harmonized\" not in file:\n",
-    "        print(file)\n",
-    "        df = pd.read_csv(f\"./test_tables/{file}\")\n",
-    "        df.columns = ['' if 'Unnamed:' in col else col for col in df.columns]\n",
-    "        col_to_ref_col = gwas_column_matching_engine.match_many_col_to_ref_col(df)\n",
-    "        for ref_col in col_to_ref_col:\n",
-    "            print(f\"{ref_col}: {col_to_ref_col[ref_col]}\")\n",
-    "        print()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "3e09de28",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "modified_df_all = None\n",
-    "for file in os.listdir(\"./test_tables\"):\n",
-    "    if \".csv\" in file and \"table\" in file and \"harmonized\" not in file:\n",
-    "        df = pd.read_csv(f\"./test_tables/{file}\")\n",
-    "        df.columns = ['' if 'Unnamed:' in col else col for col in df.columns]\n",
-    "        modified_df = format_original_table(df, gwas_column_matching_engine, remove_unique_col = False)\n",
-    "        modified_df[\"file_name\"] = file\n",
-    "        if modified_df_all is None:\n",
-    "            modified_df_all = modified_df.copy()\n",
-    "        else:\n",
-    "            modified_df_all = pd.concat([modified_df_all, modified_df], ignore_index = True)\n",
-    "        modified_df.to_csv(f\"./harmonized_test_tables/{file.replace('.csv', '')}_harmonized.csv\", index = False)\n",
-    "modified_df_all.to_csv(\"./harmonized_test_tables/harmonized_table.csv\", index = False)"
+    "    (30448613, \"PMC6331247\"), (30979435, \"PMC6783343\"), (31055733, \"PMC6544706\"),  (30617256, \"PMC6836675\"),\n",
+    "    (30820047, \"PMC6463297\"), (29458411, \"PMC5819208\"), (29777097, \"PMC5959890\"), (30651383, \"PMC6369905\"),\n",
+    "    (31497858, \"PMC6736148\"), (30930738, \"PMC6425305\"), (31426376, \"PMC6723529\"), (29967939, \"PMC6280657\"),\n",
+    "    (29107063, \"PMC5920782\"), (29274321, \"PMC5938137\"), (30413934, \"PMC6358498\"), (30805717, \"PMC7193309\"),\n",
+    "    (30636644, \"PMC6330399\"), (29752348, \"PMC5976227\"), (28560309, \"PMC5440281\"), (27899424, \"PMC5237405\"),\n",
+    "]"
    ]
   }
  ],
