Fix some bugs regarding testing code

--- a/test_gwas_table_extraction_advp1.ipynb
+++ b/test_gwas_table_extraction_advp1.ipynb
@@ -47,8 +47,8 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "objc[11135]: Class AVFFrameReceiver is implemented in both /Users/justpqa/advpai/venv/lib/python3.10/site-packages/av/.dylibs/libavdevice.62.1.100.dylib (0x1210503a8) and /Users/justpqa/advpai/venv/lib/python3.10/site-packages/cv2/.dylibs/libavdevice.61.3.100.dylib (0x13e51c3a8). This may cause spurious casting failures and mysterious crashes. One of the duplicates must be removed or renamed.\n",
-      "objc[11135]: Class AVFAudioReceiver is implemented in both /Users/justpqa/advpai/venv/lib/python3.10/site-packages/av/.dylibs/libavdevice.62.1.100.dylib (0x1210503f8) and /Users/justpqa/advpai/venv/lib/python3.10/site-packages/cv2/.dylibs/libavdevice.61.3.100.dylib (0x13e51c3f8). This may cause spurious casting failures and mysterious crashes. One of the duplicates must be removed or renamed.\n",
+      "objc[15033]: Class AVFFrameReceiver is implemented in both /Users/justpqa/advpai/venv/lib/python3.10/site-packages/av/.dylibs/libavdevice.62.1.100.dylib (0x1235d03a8) and /Users/justpqa/advpai/venv/lib/python3.10/site-packages/cv2/.dylibs/libavdevice.61.3.100.dylib (0x14081c3a8). This may cause spurious casting failures and mysterious crashes. One of the duplicates must be removed or renamed.\n",
+      "objc[15033]: Class AVFAudioReceiver is implemented in both /Users/justpqa/advpai/venv/lib/python3.10/site-packages/av/.dylibs/libavdevice.62.1.100.dylib (0x1235d03f8) and /Users/justpqa/advpai/venv/lib/python3.10/site-packages/cv2/.dylibs/libavdevice.61.3.100.dylib (0x14081c3f8). This may cause spurious casting failures and mysterious crashes. One of the duplicates must be removed or renamed.\n",
       "Usage of TableItem.export_to_dataframe() without `doc` argument is deprecated.\n",
       "Usage of TableItem.export_to_dataframe() without `doc` argument is deprecated.\n",
       "Usage of TableItem.export_to_dataframe() without `doc` argument is deprecated.\n",
@@ -62,7 +62,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Success in extracting from test_papers/30448613_PMC6331247.pdf\n",
+      "Error in extracting from test_papers/30448613_PMC6331247.pdf\n",
       "Successfully retrieve number of columns\n"
      ]
     },
@@ -136,7 +136,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Success in extracting from test_papers/29458411_PMC5819208.pdf\n",
+      "Error in extracting from test_papers/29458411_PMC5819208.pdf\n",
       "Successfully retrieve number of columns\n"
      ]
     },
@@ -153,7 +153,7 @@
      "text": [
       "Success in extracting from test_papers/29777097_PMC5959890.pdf\n",
       "Successfully retrieve number of columns\n",
-      "Success in extracting from test_papers/30651383_PMC6369905.pdf\n",
+      "Error in extracting from test_papers/30651383_PMC6369905.pdf\n",
       "Error in extracting from test_papers/31497858_PMC6736148.pdf\n",
       "Successfully retrieve number of columns\n"
      ]
@@ -244,7 +244,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Success in extracting from test_papers/29107063_PMC5920782.pdf\n",
+      "Error in extracting from test_papers/29107063_PMC5920782.pdf\n",
       "Successfully retrieve number of columns\n"
      ]
     },
@@ -306,10 +306,33 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Success in extracting from test_papers/30805717_PMC7193309.pdf\n",
-      "Error in extracting from test_papers/30636644_PMC6330399.pdf\n",
+      "Error in extracting from test_papers/30805717_PMC7193309.pdf\n",
+      "Successfully retrieve number of columns\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Usage of TableItem.export_to_dataframe() without `doc` argument is deprecated.\n",
+      "Usage of TableItem.export_to_dataframe() without `doc` argument is deprecated.\n",
+      "Usage of TableItem.export_to_dataframe() without `doc` argument is deprecated.\n",
+      "Usage of TableItem.export_to_dataframe() without `doc` argument is deprecated.\n",
+      "Usage of TableItem.export_to_dataframe() without `doc` argument is deprecated.\n",
+      "Usage of TableItem.export_to_dataframe() without `doc` argument is deprecated.\n",
+      "Usage of TableItem.export_to_dataframe() without `doc` argument is deprecated.\n",
+      "Usage of TableItem.export_to_dataframe() without `doc` argument is deprecated.\n",
+      "Usage of TableItem.export_to_dataframe() without `doc` argument is deprecated.\n",
+      "Usage of TableItem.export_to_dataframe() without `doc` argument is deprecated.\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Success in extracting from test_papers/30636644_PMC6330399.pdf\n",
       "Successfully retrieve number of columns\n",
-      "Success in extracting from test_papers/29752348_PMC5976227.pdf\n",
+      "Error in extracting from test_papers/29752348_PMC5976227.pdf\n",
       "Successfully retrieve number of columns\n"
      ]
     },
@@ -325,7 +348,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Success in extracting from test_papers/28560309_PMC5440281.pdf\n",
+      "Error in extracting from test_papers/28560309_PMC5440281.pdf\n",
       "Successfully retrieve number of columns\n"
      ]
     },
@@ -370,6 +393,7 @@
     "                harmonized_df_all = harmonized_df.copy()\n",
     "            else:\n",
     "                harmonized_df_all = pd.concat([harmonized_df_all, harmonized_df], ignore_index = True)\n",
+    "        harmonized_df_all.to_csv(f\"pred_tables/{pmid}_{pmcid}.csv\", index = False)\n",
     "        print(f\"Success in extracting from test_papers/{pmid}_{pmcid}.pdf\")\n",
     "    except:\n",
     "        print(f\"Error in extracting from test_papers/{pmid}_{pmcid}.pdf\")"
