Update code for most loose in checking for extraction of right SNP

--- a/gwas_table_extraction_experiment.ipynb
+++ b/gwas_table_extraction_experiment.ipynb
@@ -20,6 +20,7 @@
    "source": [
     "import os\n",
     "from copy import deepcopy\n",
+    "import json\n",
     "# import xml.etree.ElementTree as ET\n",
     "# from rich.tree import Tree\n",
     "# from rich import print as rprint\n",
@@ -1852,7 +1853,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/var/folders/5b/jn4p_4vx7j9gx2jdrmbjlxnr0000gn/T/ipykernel_1975/1971750490.py:28: FutureWarning: The behavior of DataFrame concatenation with empty or all-NA entries is deprecated. In a future version, this will no longer exclude empty or all-NA columns when determining the result dtypes. To retain the old behavior, exclude the relevant entries before the concat operation.\n",
+      "/var/folders/5b/jn4p_4vx7j9gx2jdrmbjlxnr0000gn/T/ipykernel_5345/2412568355.py:33: FutureWarning: The behavior of DataFrame concatenation with empty or all-NA entries is deprecated. In a future version, this will no longer exclude empty or all-NA columns when determining the result dtypes. To retain the old behavior, exclude the relevant entries before the concat operation.\n",
       "  harmonized_df_all = pd.concat([harmonized_df_all, harmonized_df], ignore_index = True)\n"
      ]
     },
@@ -1871,7 +1872,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/var/folders/5b/jn4p_4vx7j9gx2jdrmbjlxnr0000gn/T/ipykernel_1975/1971750490.py:28: FutureWarning: The behavior of DataFrame concatenation with empty or all-NA entries is deprecated. In a future version, this will no longer exclude empty or all-NA columns when determining the result dtypes. To retain the old behavior, exclude the relevant entries before the concat operation.\n",
+      "/var/folders/5b/jn4p_4vx7j9gx2jdrmbjlxnr0000gn/T/ipykernel_5345/2412568355.py:33: FutureWarning: The behavior of DataFrame concatenation with empty or all-NA entries is deprecated. In a future version, this will no longer exclude empty or all-NA columns when determining the result dtypes. To retain the old behavior, exclude the relevant entries before the concat operation.\n",
       "  harmonized_df_all = pd.concat([harmonized_df_all, harmonized_df], ignore_index = True)\n"
      ]
     },
@@ -1912,7 +1913,7 @@
       "\n",
       "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
       "  df_with_ref_col[new_col] = df[new_col_to_old_col_lst[new_col][0][0]]\n",
-      "/var/folders/5b/jn4p_4vx7j9gx2jdrmbjlxnr0000gn/T/ipykernel_1975/1971750490.py:28: FutureWarning: The behavior of DataFrame concatenation with empty or all-NA entries is deprecated. In a future version, this will no longer exclude empty or all-NA columns when determining the result dtypes. To retain the old behavior, exclude the relevant entries before the concat operation.\n",
+      "/var/folders/5b/jn4p_4vx7j9gx2jdrmbjlxnr0000gn/T/ipykernel_5345/2412568355.py:33: FutureWarning: The behavior of DataFrame concatenation with empty or all-NA entries is deprecated. In a future version, this will no longer exclude empty or all-NA columns when determining the result dtypes. To retain the old behavior, exclude the relevant entries before the concat operation.\n",
       "  harmonized_df_all = pd.concat([harmonized_df_all, harmonized_df], ignore_index = True)\n"
      ]
     },
@@ -1932,7 +1933,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/var/folders/5b/jn4p_4vx7j9gx2jdrmbjlxnr0000gn/T/ipykernel_1975/1971750490.py:28: FutureWarning: The behavior of DataFrame concatenation with empty or all-NA entries is deprecated. In a future version, this will no longer exclude empty or all-NA columns when determining the result dtypes. To retain the old behavior, exclude the relevant entries before the concat operation.\n",
+      "/var/folders/5b/jn4p_4vx7j9gx2jdrmbjlxnr0000gn/T/ipykernel_5345/2412568355.py:33: FutureWarning: The behavior of DataFrame concatenation with empty or all-NA entries is deprecated. In a future version, this will no longer exclude empty or all-NA columns when determining the result dtypes. To retain the old behavior, exclude the relevant entries before the concat operation.\n",
       "  harmonized_df_all = pd.concat([harmonized_df_all, harmonized_df], ignore_index = True)\n"
      ]
     },
@@ -1947,15 +1948,14 @@
       "Error in extracting from 31497858-PMC6736148 with error Expecting value: line 1 column 2 (char 1)\n",
       "Success in harmonizing from 31497858-PMC6736148\n",
       "Successfully retrieve list of tables' id\n",
-      "Success in extracting from 30930738-PMC6425305\n",
-      "Success in harmonizing from 30930738-PMC6425305\n"
+      "Success in extracting from 30930738-PMC6425305\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/var/folders/5b/jn4p_4vx7j9gx2jdrmbjlxnr0000gn/T/ipykernel_1975/1971750490.py:28: FutureWarning: The behavior of DataFrame concatenation with empty or all-NA entries is deprecated. In a future version, this will no longer exclude empty or all-NA columns when determining the result dtypes. To retain the old behavior, exclude the relevant entries before the concat operation.\n",
+      "/var/folders/5b/jn4p_4vx7j9gx2jdrmbjlxnr0000gn/T/ipykernel_5345/2412568355.py:33: FutureWarning: The behavior of DataFrame concatenation with empty or all-NA entries is deprecated. In a future version, this will no longer exclude empty or all-NA columns when determining the result dtypes. To retain the old behavior, exclude the relevant entries before the concat operation.\n",
       "  harmonized_df_all = pd.concat([harmonized_df_all, harmonized_df], ignore_index = True)\n"
      ]
     },
@@ -1963,6 +1963,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "Success in harmonizing from 30930738-PMC6425305\n",
       "Successfully retrieve list of tables' id\n",
       "Success in extracting from 31426376-PMC6723529\n",
       "Success in harmonizing from 31426376-PMC6723529\n",
@@ -1977,7 +1978,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/var/folders/5b/jn4p_4vx7j9gx2jdrmbjlxnr0000gn/T/ipykernel_1975/1971750490.py:28: FutureWarning: The behavior of DataFrame concatenation with empty or all-NA entries is deprecated. In a future version, this will no longer exclude empty or all-NA columns when determining the result dtypes. To retain the old behavior, exclude the relevant entries before the concat operation.\n",
+      "/var/folders/5b/jn4p_4vx7j9gx2jdrmbjlxnr0000gn/T/ipykernel_5345/2412568355.py:33: FutureWarning: The behavior of DataFrame concatenation with empty or all-NA entries is deprecated. In a future version, this will no longer exclude empty or all-NA columns when determining the result dtypes. To retain the old behavior, exclude the relevant entries before the concat operation.\n",
       "  harmonized_df_all = pd.concat([harmonized_df_all, harmonized_df], ignore_index = True)\n"
      ]
     },
@@ -1994,7 +1995,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/var/folders/5b/jn4p_4vx7j9gx2jdrmbjlxnr0000gn/T/ipykernel_1975/1971750490.py:28: FutureWarning: The behavior of DataFrame concatenation with empty or all-NA entries is deprecated. In a future version, this will no longer exclude empty or all-NA columns when determining the result dtypes. To retain the old behavior, exclude the relevant entries before the concat operation.\n",
+      "/var/folders/5b/jn4p_4vx7j9gx2jdrmbjlxnr0000gn/T/ipykernel_5345/2412568355.py:33: FutureWarning: The behavior of DataFrame concatenation with empty or all-NA entries is deprecated. In a future version, this will no longer exclude empty or all-NA columns when determining the result dtypes. To retain the old behavior, exclude the relevant entries before the concat operation.\n",
       "  harmonized_df_all = pd.concat([harmonized_df_all, harmonized_df], ignore_index = True)\n",
       "/Users/justpqa/advpai/gwas_table_extraction.py:560: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame.\n",
@@ -2029,7 +2030,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/var/folders/5b/jn4p_4vx7j9gx2jdrmbjlxnr0000gn/T/ipykernel_1975/1971750490.py:28: FutureWarning: The behavior of DataFrame concatenation with empty or all-NA entries is deprecated. In a future version, this will no longer exclude empty or all-NA columns when determining the result dtypes. To retain the old behavior, exclude the relevant entries before the concat operation.\n",
+      "/var/folders/5b/jn4p_4vx7j9gx2jdrmbjlxnr0000gn/T/ipykernel_5345/2412568355.py:33: FutureWarning: The behavior of DataFrame concatenation with empty or all-NA entries is deprecated. In a future version, this will no longer exclude empty or all-NA columns when determining the result dtypes. To retain the old behavior, exclude the relevant entries before the concat operation.\n",
       "  harmonized_df_all = pd.concat([harmonized_df_all, harmonized_df], ignore_index = True)\n"
      ]
     },
@@ -2058,7 +2059,7 @@
       "\n",
       "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
       "  df_with_ref_col[new_col] = df[new_col_to_old_col_lst[new_col][0][0]]\n",
-      "/var/folders/5b/jn4p_4vx7j9gx2jdrmbjlxnr0000gn/T/ipykernel_1975/1971750490.py:28: FutureWarning: The behavior of DataFrame concatenation with empty or all-NA entries is deprecated. In a future version, this will no longer exclude empty or all-NA columns when determining the result dtypes. To retain the old behavior, exclude the relevant entries before the concat operation.\n",
+      "/var/folders/5b/jn4p_4vx7j9gx2jdrmbjlxnr0000gn/T/ipykernel_5345/2412568355.py:33: FutureWarning: The behavior of DataFrame concatenation with empty or all-NA entries is deprecated. In a future version, this will no longer exclude empty or all-NA columns when determining the result dtypes. To retain the old behavior, exclude the relevant entries before the concat operation.\n",
       "  harmonized_df_all = pd.concat([harmonized_df_all, harmonized_df], ignore_index = True)\n"
      ]
     },
@@ -2075,7 +2076,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/var/folders/5b/jn4p_4vx7j9gx2jdrmbjlxnr0000gn/T/ipykernel_1975/1971750490.py:28: FutureWarning: The behavior of DataFrame concatenation with empty or all-NA entries is deprecated. In a future version, this will no longer exclude empty or all-NA columns when determining the result dtypes. To retain the old behavior, exclude the relevant entries before the concat operation.\n",
+      "/var/folders/5b/jn4p_4vx7j9gx2jdrmbjlxnr0000gn/T/ipykernel_5345/2412568355.py:33: FutureWarning: The behavior of DataFrame concatenation with empty or all-NA entries is deprecated. In a future version, this will no longer exclude empty or all-NA columns when determining the result dtypes. To retain the old behavior, exclude the relevant entries before the concat operation.\n",
       "  harmonized_df_all = pd.concat([harmonized_df_all, harmonized_df], ignore_index = True)\n"
      ]
     },
@@ -2088,15 +2089,14 @@
       "Success in extracting from 29752348-PMC5976227\n",
       "Success in harmonizing from 29752348-PMC5976227\n",
       "Successfully retrieve list of tables' id\n",
-      "Success in extracting from 28560309-PMC5440281\n",
-      "Success in harmonizing from 28560309-PMC5440281\n"
+      "Success in extracting from 28560309-PMC5440281\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/var/folders/5b/jn4p_4vx7j9gx2jdrmbjlxnr0000gn/T/ipykernel_1975/1971750490.py:28: FutureWarning: The behavior of DataFrame concatenation with empty or all-NA entries is deprecated. In a future version, this will no longer exclude empty or all-NA columns when determining the result dtypes. To retain the old behavior, exclude the relevant entries before the concat operation.\n",
+      "/var/folders/5b/jn4p_4vx7j9gx2jdrmbjlxnr0000gn/T/ipykernel_5345/2412568355.py:33: FutureWarning: The behavior of DataFrame concatenation with empty or all-NA entries is deprecated. In a future version, this will no longer exclude empty or all-NA columns when determining the result dtypes. To retain the old behavior, exclude the relevant entries before the concat operation.\n",
       "  harmonized_df_all = pd.concat([harmonized_df_all, harmonized_df], ignore_index = True)\n"
      ]
     },
@@ -2104,6 +2104,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "Success in harmonizing from 28560309-PMC5440281\n",
       "Successfully retrieve list of tables' id\n",
       "Success in extracting from 27899424-PMC5237405\n",
       "Success in harmonizing from 27899424-PMC5237405\n"
@@ -2122,6 +2123,7 @@
     "referencing_col_df = pd.read_csv(\"Rules for harmonizing ADVP papers - Main cols.csv\")\n",
     "gwas_column_matching_engine = GWASColumnMatchingEngine(referencing_col_df)\n",
     "\n",
+    "file_name_to_matching = {}\n",
     "for pmid, pmcid in test_papers_info:\n",
     "    try:\n",
     "        table_link_to_excel(pmid, pmcid)\n",
@@ -2134,6 +2136,10 @@
     "        for file_name in os.listdir(\"tables\"):\n",
     "            if str(pmid) in file_name and pmcid in file_name:\n",
     "                df = pd.read_excel(f\"tables/{file_name}\")\n",
+    "\n",
+    "                # save matching dict for debug\n",
+    "                file_name_to_matching[file_name] = gwas_column_matching_engine.match_many_col_to_ref_col(df)\n",
+    "\n",
     "                harmonized_df = format_original_table(df, gwas_column_matching_engine, remove_unique_col = True)\n",
     "                if harmonized_df_all is None:\n",
     "                    harmonized_df_all = harmonized_df.copy()\n",
@@ -2145,7 +2151,9 @@
     "        harmonized_df_all.to_csv(f\"pred_tables/{pmid}_{pmcid}.csv\", index = False)\n",
     "        print(f\"Success in harmonizing from {pmid}-{pmcid}\")\n",
     "    except Exception as e:\n",
-    "        print(f\"Error in harmonizing from {pmid}-{pmcid} with error {e}\")"
+    "        print(f\"Error in harmonizing from {pmid}-{pmcid} with error {e}\")\n",
+    "with open(\"test_matching_dict.json\", \"w\") as f:\n",
+    "    json.dump(file_name_to_matching, f, indent=4)"
    ]
   }
  ],
